force-app/main/default/objects/RMA__c/RMA__c.object-meta.xml
<CustomObject>
    <description>Return Material Authorization</description>
    <label>Return Material Authorization</label>
    <nameField>
        <displayFormat>RMA-{0000}</displayFormat>
        <label>RMA No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Material Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>