force-app/main/default/objects/RMA__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Return_Merchandise_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>