force-app/main/default/objects/RMA__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from contact</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>