force-app/main/default/objects/RMA__c/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <formula>Account__r.Master_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCN</label>
    <type>Text</type>
</CustomField>