force-app/main/default/objects/RMA__c/fields/NCR_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>NCR_Status_Comments__c</fullName>
    <label>NCR Status Comments</label>
    <type>TextArea</type>
</CustomField>