force-app/main/default/objects/RMA__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>