force-app/main/default/objects/RMA__c/fields/Reason_for_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Return__c</fullName>
    <label>Reason for Return</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>