force-app/main/default/objects/RMA__c/fields/Request_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_Date__c</fullName>
    <description>Represents the date and time when request was submitted for approval.</description>
    <label>Request Submitted Date</label>
    <type>DateTime</type>
</CustomField>