force-app/main/default/objects/RMA__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>RMA Received</fullName>
            </value>
            <value>
                <fullName>Processed Awaiting Receipt</fullName>
            </value>
            <value>
                <fullName>Closed – Rejected</fullName>
            </value>
            <value>
                <fullName>Closed – pending Finance Credit</fullName>
            </value>
            <value>
                <fullName>Closed – Routed to Service Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>