force-app/main/default/objects/RMA__c/recordTypes/Equipment_RMA.recordType-meta.xml
<RecordType>
    <fullName>Equipment_RMA</fullName>
    <active>true</active>
    <label>Equipment RMA</label>
</RecordType>