force-app/main/default/objects/RMA__c/recordTypes/Spare_Parts_RMA.recordType-meta.xml
<RecordType>
    <fullName>Spare_Parts_RMA</fullName>
    <active>true</active>
    <label>Spare Parts RMA</label>
</RecordType>